--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="exp-box">
                             <span>2001-2006</span>
                             <h4>Infantry Team Leader</h4>
-                            <h5>City of Renton</h5>
+                            <h5>US Army - 1st Armored Division</h5>
                             <p>
                                 Led and embraced broad range of responsibilities suited for higher ranks to
                                 include leading team of four soldiers while deployed on patrols and raids. Exhibited quick decision-making skill in mission critical situations.
